# goit-pythonweb-hw-12

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/versions/: 095759f7d34a_add_to_model_user_filed_confirmed.py  22f372f56f75_change_email_type.py  2f797b629fab_removed_moderator_role.py  6024a3aa51dd_add_user.py  7cd60eae46a8_init.py  7d71fc86e5fb_init.py  a1e1c6470805_added_user_role.py  d411e763bb23_added_refresh_token.py
src/: schemas.py
src/api/: contacts.py  users.py  utils.py
src/cache/: redis_client.py  user_cache.py
src/conf/: config.py  limiter.py
src/contacts/: __init__.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  mail.py  upload_file.py  users.py
src/services/templates/: password_reset.html  verify_email.html
tests/: test_api_contacts_unit.py  test_contacts_repository_unit.py  test_integration_auth.py  test_integration_users.py  test_users_repository_unit.py
